# pulse-ai

./: .gitignore  .replit  CLAUDE.md  CONTRIBUTING.md  README.md  REFACTORING.md  alembic.ini  app.py  complete_reorganization.sh  db_migration.py  generate_org_data.py  init_sample_data.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  reorganize_project.sh  requirements.txt  setup_env.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
attached_assets/: Pasted--Prompt-for-Replit-AI-F-ck-Meetings-Phase-2-Org-Chart-Visualization-Build-the-organization-c-1744785471385.txt  Pasted-DOM-content-loaded-starting-chart-initialization-Chart-data-type-object-Chart-data-keys-3-n-1744791347648.txt  Pasted-Yes-the-prompt-I-provided-is-accurate-based-on-how-large-tech-companies-are-typically-organized-bu-1744787258723.txt
claude_sessions/: design_session_one.md
data/: README.md
docs/: README.md
docs/architecture/: api.md  data-model.md  database-migrations.md  overview.md
docs/development/: database-migrations.md  onboarding.md  (+2 more)
src/: README.md
synthetic_data/: company_okrs.csv  cross_team_dependencies.csv  department_okrs.csv  departments.csv  employees.csv  key_results.csv  okr_updates.csv  positions.csv  resource_allocation.csv  status_updates.csv  team_members.csv  team_okrs.csv  teams.csv
templates/: direct_chart.html  enterprise_data_error.html  enterprise_data_success.html  index.html  org_chart.html
tests/: README.md  __init__.py
utils/: enterprise_data_generator.py  reset_database.py
(+27 files in other folders)
