[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-ai"
version = "0.1.0"
description = "Organizational visibility platform for identifying misalignment across companies"
authors = [
    {name = "Pulse AI Team", email = "team@pulseai.example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.21.0,<2.0.0",
    "faker>=15.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "plotly>=5.10.0",
    "networkx>=2.8.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "sqlalchemy>=2.0.0",
    "tabulate>=0.9.0",
    "alembic>=1.10.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/pulse-ai"
"Bug Tracker" = "https://github.com/yourusername/pulse-ai/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
